connect app firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: 
+  firebase_core:
+  firebase_auth:
+  firebase_storage:
+  cloud_firestore:
+  firebase_messaging:
+  intl:
+  image_picker:
+  google_sign_in: ^5.4.1
+  google_fonts: ^3.0.1
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
