--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   google_sign_in: ^5.4.1
   google_fonts: ^3.0.1
   flutter_easyloading: ^3.0.5
+  connectivity_plus: ^2.3.7
+  shimmer_animation: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
